--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "hello-world-app",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://bluaguilar.github.io/hello-world-app-template/",
   "dependencies": {
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
